tests/testFiles/semanticErrors/forloopwithnonbooleanconditional.meme
one does not simply {
} without (ermahgerd c = 1; c + 10; c = c + 1)
